math file added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>JavaScript-JS</title>
-    <script src="/js/condition.js"></script>
+    <script src="/js/math.js"></script>
 </head>
 <body>
     <h1>Check console for output</h1>
